{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 37,
  "lineage": "c2038965-d1ad-0607-e298-894da4e1bdf2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "hello-world-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:557929431850:loadbalancer/hello-world-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "hello-world-elb-2090143626.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "hello-world-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "hello-world-elb",
            "security_groups": [
              "sg-0e78288476c8086d3"
            ],
            "source_security_group": "557929431850/hello-world-elb-sg",
            "source_security_group_id": "sg-0e78288476c8086d3",
            "subnets": [
              "subnet-08c0f98dbddb8dbb0",
              "subnet-08cd21b0ab52c78bc",
              "subnet-0c80b4efea344f33c"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.hello-world-elb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hello-world-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:security-group/sg-0e78288476c8086d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e78288476c8086d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hello-world-elb-sg",
            "name_prefix": "",
            "owner_id": "557929431850",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hello-world-lc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:security-group/sg-04e2066469c3b6656",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e2066469c3b6656",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "port 80 open to elb sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e78288476c8086d3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hello-world-lc-sg",
            "name_prefix": "",
            "owner_id": "557929431850",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hello-world-elb-sg",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0898c8b13d40946db",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-233-90-211.compute-1.amazonaws.com",
            "public_ip": "34.233.90.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hello-world-vpc-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ce551ecdc8d7bb87",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-192-179-106.compute-1.amazonaws.com",
            "public_ip": "34.192.179.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hello-world-vpc-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ed42759ca8153234",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-21-58-165.compute-1.amazonaws.com",
            "public_ip": "107.21.58.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hello-world-vpc-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:internet-gateway/igw-0f6199e16fbdab366",
            "id": "igw-0f6199e16fbdab366",
            "owner_id": "557929431850",
            "tags": {
              "Name": "hello-world-vpc",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0898c8b13d40946db",
            "id": "nat-0a5bfca6a6c9d0868",
            "network_interface_id": "eni-0438d04eeef4e7bb3",
            "private_ip": "10.0.101.80",
            "public_ip": "34.233.90.211",
            "subnet_id": "subnet-0c80b4efea344f33c",
            "tags": {
              "Name": "hello-world-vpc-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce551ecdc8d7bb87",
            "id": "nat-0cf8936aa31e172db",
            "network_interface_id": "eni-067af0966f57c384e",
            "private_ip": "10.0.102.59",
            "public_ip": "34.192.179.106",
            "subnet_id": "subnet-08cd21b0ab52c78bc",
            "tags": {
              "Name": "hello-world-vpc-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed42759ca8153234",
            "id": "nat-0155a9444211da679",
            "network_interface_id": "eni-049bfd73148ff768d",
            "private_ip": "10.0.103.232",
            "public_ip": "107.21.58.165",
            "subnet_id": "subnet-08c0f98dbddb8dbb0",
            "tags": {
              "Name": "hello-world-vpc-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-017fd78174b475e151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a5bfca6a6c9d0868",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017fd78174b475e15",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0814d5eb680d319021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cf8936aa31e172db",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0814d5eb680d31902",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02476e1731a15ba3d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0155a9444211da679",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02476e1731a15ba3d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f6199e16fbdab366",
            "id": "r-rtb-0f1d7fc6d5e890df31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f1d7fc6d5e890df3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:route-table/rtb-017fd78174b475e15",
            "id": "rtb-017fd78174b475e15",
            "owner_id": "557929431850",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hello-world-vpc-private-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-private-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:route-table/rtb-0814d5eb680d31902",
            "id": "rtb-0814d5eb680d31902",
            "owner_id": "557929431850",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hello-world-vpc-private-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-private-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:route-table/rtb-02476e1731a15ba3d",
            "id": "rtb-02476e1731a15ba3d",
            "owner_id": "557929431850",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hello-world-vpc-private-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-private-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:route-table/rtb-0f1d7fc6d5e890df3",
            "id": "rtb-0f1d7fc6d5e890df3",
            "owner_id": "557929431850",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hello-world-vpc-public",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-public",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f55c4f30e7b0ef6",
            "route_table_id": "rtb-017fd78174b475e15",
            "subnet_id": "subnet-0f8fd8640af26ca41"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063197f738a7fdd29",
            "route_table_id": "rtb-0814d5eb680d31902",
            "subnet_id": "subnet-0063f1393e0a0a3e4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b9e51e831c355b0",
            "route_table_id": "rtb-02476e1731a15ba3d",
            "subnet_id": "subnet-06fb2a0deace005b5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00283b496245e8a37",
            "route_table_id": "rtb-0f1d7fc6d5e890df3",
            "subnet_id": "subnet-0c80b4efea344f33c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cf26a62126ace70",
            "route_table_id": "rtb-0f1d7fc6d5e890df3",
            "subnet_id": "subnet-08cd21b0ab52c78bc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e42521c90a87c149",
            "route_table_id": "rtb-0f1d7fc6d5e890df3",
            "subnet_id": "subnet-08c0f98dbddb8dbb0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:subnet/subnet-0f8fd8640af26ca41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f8fd8640af26ca41",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557929431850",
            "tags": {
              "Name": "hello-world-vpc-private-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-private-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:subnet/subnet-0063f1393e0a0a3e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0063f1393e0a0a3e4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557929431850",
            "tags": {
              "Name": "hello-world-vpc-private-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-private-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:subnet/subnet-06fb2a0deace005b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06fb2a0deace005b5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557929431850",
            "tags": {
              "Name": "hello-world-vpc-private-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-private-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:subnet/subnet-0c80b4efea344f33c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0c80b4efea344f33c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557929431850",
            "tags": {
              "Name": "hello-world-vpc-public-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-public-us-east-1a",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:subnet/subnet-08cd21b0ab52c78bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-08cd21b0ab52c78bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557929431850",
            "tags": {
              "Name": "hello-world-vpc-public-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-public-us-east-1b",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:subnet/subnet-08c0f98dbddb8dbb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-08c0f98dbddb8dbb0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557929431850",
            "tags": {
              "Name": "hello-world-vpc-public-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc-public-us-east-1c",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0920291c47b080bd1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557929431850:vpc/vpc-0920291c47b080bd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05cfa07a27579f7e8",
            "default_route_table_id": "rtb-06686ca2f90dddbd8",
            "default_security_group_id": "sg-02690fc17e2d08847",
            "dhcp_options_id": "dopt-1bdbf361",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0920291c47b080bd1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06686ca2f90dddbd8",
            "owner_id": "557929431850",
            "tags": {
              "Name": "hello-world-vpc",
              "Project": "hello-world",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "hello-world-vpc",
              "Project": "hello-world",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}